Fix Card alignment

--- a/apps/modernization-ui/src/design-system/card/card.module.scss
+++ b/apps/modernization-ui/src/design-system/card/card.module.scss
@@ -11,6 +11,7 @@
         padding: 1rem;
         justify-content: space-between;
         align-items: center;
+        gap: 0.5rem;
         @extend %thin-bottom;
     }
 }
@@ -19,6 +20,15 @@
     font-size: 0.875rem;
     line-height: 1.3125rem;
     color: colors.$base-darker;
-    align-items: flex-start;
+    align-self: flex-start;
+    flex-direction: column;
+}
+
+.info {
+    margin-left: auto;
+}
+
+.titleBlock {
+    display: flex;
     flex-direction: column;
 }
